SERVER-57281 SBE incorrectly constructs a collection scan instead of an optimized oplog scan

We will take into consideration the stopApplyingFilterAfterFirstMatch
flag when deciding to contruct an optimized oplog scan.